# MorphX

./: .gitignore  README.md  plot_figures.py  requirements.txt  run.sh
TGS/hijack/include/: cuda-helper.h  cuda-subset.h  hijack.h
TGS/hijack/src/: cuda_originals.c  high_priority_hijack_call.c  loader.c  low_priority_hijack_call.c
configs/multitask/: A.json  B.json  C.json  D.json  E.json
configs/pd/: E.json  T.json
docs/: environment-packages.txt
ggnn/: CMakeLists.txt
ggnn/include/ggnn/base/: def.h  gpu_instance.cuh  graph_config.h
ggnn/include/ggnn/construction/: graph_buffer.cuh  merge_layer.cuh
ggnn/include/ggnn/cuda_utils/: distance.cuh  simple_knn_cache.cuh  simple_knn_sym_cache.cuh
ggnn/src/ggnn/base/: ggnn.cu  gpu_instance.cu  graph_config.cpp
include/: common.h
logs/reference/: manifest.txt
logs/reference/part1-colocate/: commands.tsv  manifest.json  preflight.txt
logs/reference/part1-colocate/analysis/: colocate_summary.stdout.txt
logs/reference/part1-colocate/tables/compact/: llm-1-ggnn.tsv  llm-1-mm.tsv  llm-4-ggnn.tsv  llm-4-mm.tsv
logs/reference/part1-colocate/tables/full/: llm-1-ggnn-slo.tsv  llm-1-ggnn.tsv  llm-1-mm-slo.tsv  llm-1-mm.tsv  llm-4-ggnn-slo.tsv  llm-4-ggnn.tsv  llm-4-mm-slo.tsv  llm-4-mm.tsv  slo_summary.tsv
logs/reference/part2-pd-colocate/: commands.tsv  manifest.json
logs/reference/part2-pd-colocate/configs/Figure13/: in-2048-out-256-rps-2-split-76.json  in-2048-out-256-rps-3-split-76.json  in-2048-out-256-rps-4-split-76.json  in-2048-out-256-rps-5-split-76.json  in-4096-out-128-rps-1-split-88.json  in-4096-out-128-rps-1.5-split-88.json  in-4096-out-128-rps-2-split-88.json  in-4096-out-128-rps-2.5-split-88.json  in-4096-out-128-rps-3-split-88.json  in-4096-out-256-rps-1-split-88.json  in-4096-out-256-rps-1.5-split-88.json  in-4096-out-256-rps-2-split-88.json  in-4096-out-256-rps-2.5-split-88.json  in-4096-out-256-rps-3-split-88.json
logs/reference/part2-pd-colocate/configs/Figure14/: in-2048-out-256-rps-1-split-76.json  in-2048-out-256-rps-1.5-split-76.json  in-2048-out-256-rps-2.5-split-76.json  in-4096-out-128-rps-0.4-split-76.json  in-4096-out-128-rps-0.8-split-76.json  in-4096-out-128-rps-1.2-split-76.json  in-4096-out-128-rps-1.6-split-76.json  in-4096-out-256-rps-0.4-split-76.json  in-4096-out-256-rps-0.8-split-76.json  in-4096-out-256-rps-1.2-split-76.json  in-4096-out-256-rps-1.6-split-76.json
logs/reference/part2-pd-colocate/tables/: Figure13.tsv  Figure14.tsv
logs/reference/part3-overhead/runtime-libs/: libmpi_cxx.so.40
logs/reference/part3-overhead/tables/: Figure15.tsv
logs/reference/part4-model/tables/: Figure16-profile-metadata.tsv  Figure16.tsv
microbench/: CMakeLists.txt  CMakeLists.txt.clang  bench.txt  profile.sh  profile_green_ctx_bench_ci.txt  profile_green_ctx_bench_mi.txt  result.csv
microbench/python/: README.md  setup.py
microbench/python/mycutlass/: __init__.py  binding.py
microbench/src/: bench.cu  generator.py  green_ctx_bench.cu  main.cu  my_cutlass_gemm.cu  my_cutlass_gemm.h  stream_bench.cu  stream_mm_test.cu
nvbit-tutorial/tools/mem_trace/: common.h  inject_funcs.cu  mem_trace.cu
runtime/: CMakeLists.txt
runtime/src/: api.cpp  base.cpp  cuda-lithos.cpp  cuda-llm-nolock.cpp  cuda-llm.cpp  cuda-log.cpp  cuda-orion.cpp  cuda.cpp  cuda_hook_exports.map  parse.py  preload.c  preload.h  signature.c  stub.cpp  stub.old.cpp  stub_raw.cpp  unmodified.c
scripts/: LLMEngine.html  all.csv  analysis.py  analysis_log.py  azure.py  bench.py  colocate.py  compiler.py  draw.py  graph-prep.py  infer-dnn.py  memwrap.sh  mps-wrapper.sh  pd-offline.txt  profile-attention.py  profile-gemm.py  results.csv  roofline.csv  roofline.py  run-output.sh  run.py  run.sh  smsched_api.py  summarize_offline.py  sweep_pd.py  test-LLMEngine.py  test-artifact-1.py  test-artifact.py  test-cnn.py  test-e2e.py  test-flashattn.py  test-flashinfer.py  test-graph.py  test-multillm.py  test-pd-offline.py  test-pd-online.py  test-torch-mi.py  test-torch.py  test-xformer.py  test_e2e3.py  (+4 more)
scripts/ae/: merge_colocate_smsched_tables.py  run_all.py  run_colocate_part1.py  run_colocate_part1.sh  run_overhead_model_part4.py  run_overhead_model_part4.sh  run_pd_colocate_part2.py  run_pd_colocate_part2.sh
scripts/analysis/: colocate_summary.py
scripts/colocate/: run.py
scripts/overhead/: ncu_trace.py  single_request.py
smsched-pass/: CMakeLists.txt  SMSched.cpp  SMSched.h
